@@ -1,5 +1,11 @@
 2010-02-18  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>
 
+	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::updateObjectInTree):
+	fixed #1249 GUI freezes when filters are applied. The GUI would
+	freeze for a few seconds every time user modified anything in rules
+	if a filter was applied to the tree at the same time.
+	SourceForge bug #2954501
+
 	* ObjectManipulator.cpp (ObjectManipulator::contextMenuRequested):
 	fixed #1255 context menu items "Lock" and "Unlock" are not updated
 	after object is locked.
